# calculator

./: .gitignore  .gitmodules  CMakeLists.txt  README  calculator.c
lib/: CMakeLists.txt
src/: calculator.c  expression.c  expression.h  operator.c  operator.h
